# Novelty-Code-Signing

./: README.md
back/: .gitignore  package-lock.json  package.json  tsconfig.json
back/chainlink_external/: .gitignore
back/src/: CustomRequest.ts  constants.ts  index.ts  swagger.json
back/src/Solidity/: .env  hardhat.config.js  nft-metadata.js  package.json
back/src/Swagger/: swagger.json
back/src/chainlink_external/: .gitignore
back/src/functions/: addIdentityAlchemy.js  (+2 more)
chainlink/: .gitignore  Dockerfile  IdentityStore.sol  README.txt  automatedDeployment.js  chainlink.env  clipboard-job.mjs  constants.json  docker-compose.yaml  hardhat.config.js  identity_constants.json  job.toml  jobId.json  jobOrigin.toml  oracle_constants.json  package-lock.json  package.json
chainlink/cache/: solidity-files-cache.json
chainlink/contracts/: IdentityStore.sol  Oracle.sol
chainlink/scripts/: deploy-oracle.js  deploy.js  deployIdentity.js  deployOracle.js
email-verifier/: package.json
email-verifier/src/: App.tsx  constants.ts
front/: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.json
front/public/: index.html
front/src/: App.tsx  index.css  index.tsx
python-package/: README.md  pyproject.toml
python-package/src/novelty_code_sign/: associate_gmail.py  common.py  constants.py  novelty_code_sign.py  sign.py  verify.py
python-package/src/novelty_code_sign/tests/: keys.json  test.py
python-package/src/novelty_code_sign/tests 2/: test.py
verifierServer/: Dockerfile  package.json  tsconfig.json
verifierServer/src/: index.ts
(+35 files in other folders)
