[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novelty_code_sign"
version = "0.0.1"
authors = [
  { name="Novelty Today", email="support@novelty.today" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["requests", "web3", "eth_account"]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""
